# Local-File-Search-System

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md
Local_File_Search_Backend/: CMakeLists.txt
Local_File_Search_Backend/include/: CalculatorWidget.h  CodeWidget.h  ComputerWidget.h  CrawlerController.h  DatabaseConnector.h  DictionaryLoader.h  EnglishSpellCorrectionStrategy.h  FileCrawler.h  FileData.h  FileMetadata.h  FileMetadataExtractor.h  IObserver.h  IReportFormatter.h  ISearch.h  ISpellCorrectionStrategy.h  IWidget.h  IWidgetObserver.h  ImageColorExtractor.h  ImageController.h  ImageGalleryWidget.h  IndexScorer.h  Indexer.h  LRUCache.h  MarkdownReportFormatter.h  NoSpellCorrectionStrategy.h  ObserverContext.h  ObserverSubject.h  ProgrammingLanguageWidget.h  QueryParser.h  QueryResultBundle.h  RankingObserver.h  SearchController.h  SearchEngine.h  SearchEngineProxy.h  SearchResult.h  SearchResultAnalyzer.h  SpellCheckerController.h  SuggestionObserver.h  TextExtractor.h  TextReportFormatter.h  (+3 more)
Local_File_Search_Backend/src/: CalculatorWidget.cpp  CodeWidget.cpp  ComputerWidget.cpp  CrawlerController.cpp  DatabaseConnector.cpp  EnglishSpellCorrectionStrategy.cpp  FileCrawler.cpp  FileData.cpp  FileMetadata.cpp  FileMetadataExtractor.cpp  ImageColorExtractor.cpp  ImageController.cpp  ImageGalleryWidget.cpp  IndexScorer.cpp  Indexer.cpp  MarkdownReportFormatter.cpp  ObserverContext.cpp  ObserverSubject.cpp  ProgrammingLanguageWidget.cpp  QueryParser.cpp  RankingObserver.cpp  SearchController.cpp  SearchEngine.cpp  SearchEngineProxy.cpp  SearchResult.cpp  main.cpp  (+7 more)
(+29 files in other folders)
